--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
         name = "shedaniel"
         url = "https://maven.shedaniel.me/"
     }
+    maven {
+        name = "Ladysnake Mods"
+        url = "https://maven.ladysnake.org/releases"
+    }
 }
 
 loom {
@@ -52,6 +56,10 @@ dependencies {
 
     // Mod Menu (optional, for config access)
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+    // Cardinal Components API (for player data storage)
+    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
 }
 
 processResources {
