--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
+org.gradle.java.installations.auto-download=true
+org.gradle.java.installations.auto-detect=false
 
 # Mod Properties
 mod_version=1.0.0
