Add refmap support for mixins and fix FOV mixin types
Configured refmap files for both main and client mixins in build.gradle and mixins.json files to support proper remapping. Updated GameRendererMixin to use Double instead of Float for FOV injection to match method signature and avoid type issues.

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ repositories {
 loom {
     splitEnvironmentSourceSets()
 
+    mixin {
+        add sourceSets.main, "speedster-mod-refmap.json"
+        add sourceSets.client, "client-speedster-mod-refmap.json"
+    }
+
     mods {
         "speedster" {
             sourceSet sourceSets.main
